Fix version porting errors